    + Suppression du code en double qui detectait la version
    + La fonction de vérification des mises à jours gère maintenant l'architecture (insertion dans la variable VERSION de l'arch) et propose l'update adequat

-- Yann Genevois <yann.genevois@gmail.com> Fri Mar  8 11:27:13 CET 2013


CultiBox (1.1.8) precise; urgency=low
    + Ajout de la possibilité de zoomer sur l'axe Y dans les logs 
    + Correction de tooltip et de valeur par défaut dans la base configuration
    + Suppression du composant joomfish dans joomla
    + Changement de la charte graphique du site, ajout du travail de Calagan
    + Désactivation des régulations secondaires
    + Ajout du nouvel icone de calagan

-- Yann Genevois <yann.genevois@gmail.com> Thu Mar  7 10:42:45 CET 2013


CultiBox (1.1.7) precise; urgency=low
    + Correctif pour la gestion des puissances des prises
    + Corection de la couleur du programme 4 identique à celle de la puissance
    + Vérification de l'accès à internet avant de vérifier la présence des mises à jours
    + Les programmes des prises inactives ne sont plus ajoutées dans le fichier plugv

-- Yann Genevois <yann.genevois@gmail.com> Sat Mar  2 22:07:00 CET 2013


CultiBox (1.1.6) precise; urgency=low
    + Correctif pour la dernière version

-- Yann Genevois <yann.genevois@gmail.com>  Fri Mar  1 21:27:02 CET 2013


CultiBox (1.1.5) precise; urgency=low
    + Verification que la version proposée pour les updates à un numéro de version plus grand que la version installée
    + Ajout de la possibilité de configurer une prise en 3500W ou 100W et changement des adresses et du fichier pluga en conséquence

-- Yann Genevois <yann.genevois@gmail.com>  Wed Feb 27 10:40:15 CET 2013


CultiBox (1.1.4) precise; urgency=low
    + Correction pour la gestion des updates qui restait affiché même après une update
    + Correction de l'import des programmes qui n'importait qu la prise 1
    + Le formatage de la carte SD se fait dans la configuration