@@ -9,6 +9,8 @@ CultiBox (1.1.9) precise; urgency=low
     + Le package Linux vérifie maintenant que le logiciel a été désintallé avec l'option --purge, sinon il annule la nouvelle installation et propose à l'utilisateur de lancer la commande
     + Suppression du code en double qui detectait la version
     + La fonction de vérification des mises à jours gère maintenant l'architecture (insertion dans la variable VERSION de l'arch) et propose l'update adequat
+    + Correction par Calagan du css: menu actif en blanc, correction de la taille de l'image cultibox...
+    + Ajout de tooltips pour la gestion des puissances 1000 ou 3500W
 
 -- Yann Genevois <yann.genevois@gmail.com> Fri Mar  8 11:27:13 CET 2013
 
